force-app/main/default/objects/Service__c/fields/Access_Information__c.field-meta.xml
<CustomField>
    <fullName>Access_Information__c</fullName>
    <inlineHelpText>Specific details to access residence. Gate Codes, Animals, etc...</inlineHelpText>
    <label>Access Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>