force-app/main/default/objects/Service__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>