force-app/main/default/objects/Service__c/fields/Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Caregiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caregiver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Services (Caregiver)</relationshipLabel>
    <relationshipName>Services_CareGiver</relationshipName>
    <type>Lookup</type>
</CustomField>