force-app/main/default/objects/Service__c/fields/Estimated_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Insurance__c</fullName>
    <formula>0.5 * Estimated_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>