force-app/main/default/objects/Service__c/fields/Estimated_Medicare__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Medicare__c</fullName>
    <formula>0.4 * Estimated_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Medicare</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>