force-app/main/default/objects/Service__c/fields/Estimated_Out_of_Pocket__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Out_of_Pocket__c</fullName>
    <formula>0.10* Estimated_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Out-of-Pocket</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>