force-app/main/default/objects/Service__c/fields/My_Community_User_Services__c.field-meta.xml
<CustomField>
    <fullName>My_Community_User_Services__c</fullName>
    <formula>IF($User.ContactId = Caregiver__r.Id, true, false)</formula>
    <label>My (Community User) Services</label>
    <type>Checkbox</type>
</CustomField>