force-app/main/default/objects/Service__c/fields/QR_Code__c.field-meta.xml
<CustomField>
    <fullName>QR_Code__c</fullName>
    <formula>IMAGE(&quot;https://api.qrserver.com/v1/create-qr-code/?data=https://sdodemo-main-166ce2cf6b6-172-178fe4463eb.force.com/gapart/s/flow/Aging_Aide_Check_In_Check_Out?recordId=&quot; &amp; Id, &quot;QR Scan Code&quot;, 220, 220)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QR Code</label>
    <type>Text</type>
</CustomField>