force-app/main/default/objects/Service__c/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>