force-app/main/default/objects/Service__c/fields/Service_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Name__c</fullName>
    <formula>Service_Provider__r.Name</formula>
    <label>Service Provider Name</label>
    <type>Text</type>
</CustomField>