force-app/main/default/objects/Service__c/fields/Service_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Service_Recipient__c</fullName>
    <description>Service Recipient</description>
    <inlineHelpText>Who is the recipient of this service?</inlineHelpText>
    <label>Service Recipient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>