force-app/main/default/objects/Service__c/fields/Service_Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Recipient_Name__c</fullName>
    <formula>Service_Recipient__r.FirstName &amp; &quot; &quot; &amp;  Service_Recipient__r.LastName</formula>
    <label>Service Recipient Name</label>
    <type>Text</type>
</CustomField>