force-app/main/default/objects/Service__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-Home Help</fullName>
            </value>
            <value>
                <fullName>Meals</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Other Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>