force-app/main/default/objects/Service__c/listViews/My_Services.listView-meta.xml
<ListView>
    <fullName>My_Services</fullName>
    <columns>NAME</columns>
    <columns>Service_Type__c</columns>
    <columns>Service_Recipient__c</columns>
    <columns>Service_Provider__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Community_User_Services__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Services</label>
</ListView>