force-app/main/default/objects/Service__c/listViews/My_Services_Ohana.listView-meta.xml
<ListView>
    <fullName>My_Services_Ohana</fullName>
    <columns>NAME</columns>
    <columns>Service_Type__c</columns>
    <columns>Service_Recipient__c</columns>
    <columns>Service_Provider__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Service_Provider_Name__c</field>
        <operation>startsWith</operation>
        <value>Ohana Health</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>*My Services</label>
</ListView>